# sdl2_pong

./: CMakeLists.txt  run.sh
.cache/clangd/index/: main.cpp.D6BF3C0B394C3475.idx
include/: constants.h  game.h  layer.h  layers_manager.h  main_state.h  resource_manager.h  state.h
include/layers/: main_layer.h  sub_layer.h
include/utils/: fps_clock.h  variant_overloaded.h
src/: game.cpp  layers_manager.cpp  main.cpp  resource_manager.cpp
src/layers/: main_layer.cpp
src/utils/: fps_clock.cpp
